<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:id="@+id/tv_register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/et_register_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/username_hint"
        android:inputType="text"
        android:importantForAutofill="no"
        app:layout_constraintTop_toBottomOf="@id/tv_register_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/et_register_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:importantForAutofill="no"
        app:layout_constraintTop_toBottomOf="@id/et_register_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/et_register_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:importantForAutofill="no"
        app:layout_constraintTop_toBottomOf="@id/et_register_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/register_button"
        app:layout_constraintTop_toBottomOf="@id/et_register_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"/>

    <TextView
        android:id="@+id/tv_go_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_login"
        android:textColor="@color/purple_500"
        app:layout_constraintTop_toBottomOf="@id/btn_register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:padding="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
